[package]
name = "waveslicer"
version = "0.1.0"
authors = ["Fredrik Roos <fredrik.roos@gmail.com>"]
edition = "2018"

[lib]
name = "waveslicer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
simplemad = "0.9.0"
serde_json = "1.0.40"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]